src/main/java/se/kaskware/q10/parser/PLE_Parser.java
/* PLE_Parser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. PLE_Parser.java */
package se.kaskware.q10.parser;

import se.kaskware.q10.parser.helper.LobReference;
import se.kaskware.q10.parser.helper.ProductLineReference;
import se.kaskware.q10.parser.helper.RuleReference;

import java.io.*;
import java.util.List;
import java.util.Properties;

/** This is the grammar for HPL, written in 'jtt'. */
public class PLE_Parser/*@bgen(jjtree)*/implements PLE_ParserTreeConstants, PLE_ParserConstants {/*@bgen(jjtree)*/
  protected JJTPLE_ParserState jjtree = new JJTPLE_ParserState();
  public static Properties s_parserProperties;

  private boolean attemptErrorRecovery = false;

  public boolean getAttemptErrorRecovery() {
    return attemptErrorRecovery;
  }
  public void setAttemptErrorRecovery(boolean val) {
    attemptErrorRecovery = val;
  }

  private void handleParseError(ParseException e) throws ParseException {
    System.out.println("========================================================================================");
    System.out.println("Error at line " + getToken(1).beginLine + ": " + getToken(1).image );
    System.out.println("Statement not recognised");
    e.printStackTrace();
//    error_skiptobefore(EOL);
  }

  public String dropCitaionMarks(String str) {
    int start = 0, end = str.length();
    boolean doIt = false;

    if (str.charAt(0) == '"') { start = 1; doIt = true; }
    if (str.charAt(end-1) == '"') { end--; doIt = true; }
    return doIt ? str.substring(start, end): str;  // drop citationmarks if any
  }

  public String getProperty(String varName) {
    String propValue = s_parserProperties.getProperty(varName);
    return System.getProperty(varName, propValue);  // overrides propertiesfile
  }

  public static void loadProperties(String buildProps, String targetProps) {
    try {
      if (s_parserProperties == null) {
        s_parserProperties = new Properties();
        s_parserProperties.load(new FileInputStream(buildProps));
        s_parserProperties.load(new FileInputStream(targetProps));
      }
    }
    catch (IOException e) {
      System.out.println("No hpl.properties file found. Great chance for none functional genarated files.");
    }
  }

  protected boolean checkItemIdentifier(String prefix, String id) {
    int start = id.indexOf('_');
    if (start < 0) return false;
    return prefix.equalsIgnoreCase(id.substring(0, start));
  }

  public static void main(String args[]) throws ParseException, SemanticException {
    PLE_Parser parser;

/*    String args[] = {
      "-spec", m_specFile,
      "-buildprops", m_targetenv,
      "-targetprops", m_properties
    }; */

    if (args.length == 1) {
      String parseFile = null, buildProps = null, targetProps = null;
      try {
        parseFile = args[0];
//        buildProps  = args[1];
//        targetProps = args[2];

        System.out.println("PLE_Parser: Reading product specification from file " + parseFile);

//        loadProperties(buildProps, targetProps);
        parser = new PLE_Parser(new FileInputStream(parseFile));
      } catch (FileNotFoundException e) {
        System.out.println("PLE_Parser:  File " + parseFile + " or " + buildProps  + " or " + targetProps + " not found.");
        return;
      }
    }
    else
      throw new ParseException("PLE_Parser: Usage is"
                               + " 'java PLE_Parser <inputfile> -doWsdl <bool> -doService <bool> -doBuild <bool>"
                               + " -buildProps <propFile> -targetProps <propFile>'");

    try {
      parser.setAttemptErrorRecovery(true);
      long start = System.currentTimeMillis();
      ASTLagret node = parser.lagret();
      System.out.println("parsing took: " + ((System.currentTimeMillis() - start) / 1000.0 ) + " seconds");
      start = System.currentTimeMillis();
      node.resolveReferences();
      System.out.println("resolvning references took: " + ((System.currentTimeMillis() - start) / 1000.0 ) + " seconds");
      node.dump("");

      System.out.println("PLE_Parser:  Parsing completed successfully.");
    } catch (ParseException pe) {
      System.out.println("PLE_Parser:  Encountered errors during parse.");
      pe.printStackTrace();
      throw pe;
    }
//    catch (SemanticException se) {
//      System.out.println("PLE_Parser:  Encountered errors during parse.");
//      se.printStackTrace();
//      throw se;
//    }
  }

/* grammer rules and actions follow */
  final public   ASTLagret lagret() throws ParseException {/*@bgen(jjtree) Lagret */
  ASTLagret jjtn000 = new ASTLagret(this, JJTLAGRET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LP);
      jj_consume_token(LAGRET);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LP:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        if (jj_2_1(2)) {
          product();
jjtn000.register((ASTProduct)jjtree.popNode());
        } else if (jj_2_2(2)) {
          lob();
jjtn000.register((ASTLob)jjtree.popNode());
        } else if (jj_2_3(2)) {
          productLine();
jjtn000.register((ASTProductLine)jjtree.popNode());
        } else if (jj_2_4(2)) {
          rule();
jjtn000.register((ASTRule)jjtree.popNode());
        } else if (jj_2_5(2)) {
          dataDictionary();
        } else if (jj_2_6(2)) {
          coefficienter();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RP);
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
    throw new Error("Missing return statement in function");
  }

  final public void lob() throws ParseException {/*@bgen(jjtree) Lob */
     ASTLob jjtn000 = new ASTLob(this, JJTLOB);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);ASTDocumentation doc;
     String lobID;
    try {
      jj_consume_token(LP);
      jj_consume_token(LOB);
      lobID = itemIdentifier("lob");
      doc = documentation();
      jj_consume_token(RP);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
jjtn000.setIdentifier(lobID);
       jjtn000.setDocumentation(doc);
    } catch (Throwable jjte000) {
if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public void productLine() throws ParseException {/*@bgen(jjtree) ProductLine */
     ASTProductLine jjtn000 = new ASTProductLine(this, JJTPRODUCTLINE);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);ASTDocumentation doc;
     String prodLineID;
    try {
      jj_consume_token(LP);
      jj_consume_token(PRODLINE);
      prodLineID = itemIdentifier("prodLine");
      doc = documentation();
      jj_consume_token(RP);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
jjtn000.setIdentifier(prodLineID);
       jjtn000.setDocumentation(doc);
    } catch (Throwable jjte000) {
if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public void rule() throws ParseException {/*@bgen(jjtree) Rule */
     ASTRule jjtn000 = new ASTRule(this, JJTRULE);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);ASTDocumentation doc;
     String ruleID;
    try {
      jj_consume_token(LP);
      jj_consume_token(RULE);
      ruleID = itemIdentifier("rule");
      doc = documentation();
      jj_consume_token(RP);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
jjtn000.setIdentifier(ruleID);
       jjtn000.setDocumentation(doc);
    } catch (Throwable jjte000) {
if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public ASTDataDictionary dataDictionary() throws ParseException {/*@bgen(jjtree) DataDictionary */
     ASTDataDictionary jjtn000 = new ASTDataDictionary(this, JJTDATADICTIONARY);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);ASTDocumentation doc;
     String ddID;
    try {
      jj_consume_token(LP);
      jj_consume_token(DATADICTION);
      ddID = itemIdentifier("dd");
      doc = documentation();
      jj_consume_token(RP);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
jjtn000.setIdentifier(ddID);
       jjtn000.setDocumentation(doc);
       {if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
    throw new Error("Missing return statement in function");
  }

  final public ASTCoefficienter coefficienter() throws ParseException {/*@bgen(jjtree) Coefficienter */
     ASTCoefficienter jjtn000 = new ASTCoefficienter(this, JJTCOEFFICIENTER);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);ASTDocumentation doc;
     String coffID;
    try {
      jj_consume_token(LP);
      jj_consume_token(COEFFICIENT);
      coffID = itemIdentifier("coff");
      doc = documentation();
      jj_consume_token(RP);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
jjtn000.setIdentifier(coffID);
       jjtn000.setDocumentation(doc);
       {if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
    throw new Error("Missing return statement in function");
  }

/*
    (PRODUCT product_2323
      (DOCUMENTATION
        (VERSION "12" "24")
        (SLOGAN "bla bla bla")
        (DESCRIPTION "bla bla bla")
        (CHANGEITEM (((AUTHOR "Per Leander")(WHEN "20170102 18:18")))))
      (LOB lob_353)
      (PRODUCTLINE prodLine_6878)
      (RULE rule_1231))
  */
  final public   void product() throws ParseException {/*@bgen(jjtree) Product */
     ASTProduct jjtn000 = new ASTProduct(this, JJTPRODUCT);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);ASTDocumentation doc;
     String prodID, lobId, prodLineId, ruleId;
    try {
      jj_consume_token(LP);
      jj_consume_token(PRODUCT);
      prodID = itemIdentifier("product");
      doc = documentation();
      jj_consume_token(LP);
      jj_consume_token(LOB);
      lobId = itemIdentifier("lob");
      jj_consume_token(RP);
      jj_consume_token(LP);
      jj_consume_token(PRODLINE);
      prodLineId = itemIdentifier("prodline");
      jj_consume_token(RP);
      jj_consume_token(LP);
      jj_consume_token(RULE);
      ruleId = itemIdentifier("rule");
      jj_consume_token(RP);
      jj_consume_token(RP);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
jjtn000.setIdentifier(prodID);
       jjtn000.setDocumentation(doc);
       jjtn000.setReference(new LobReference(lobId));
       jjtn000.setReference(new ProductLineReference(prodLineId));
       jjtn000.setReference(new RuleReference(ruleId));
    } catch (Throwable jjte000) {
if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

/*
  (DOCUMENTATION
    (VERSION "12" "24")
    (SLOGAN "bla bla bla")
    (DESCRIPTION "bla bla bla")
    (CHANGEITEMS (((AUTHOR "Per Leander")(WHEN "20170102 18:18")))))
 */
  final public   ASTDocumentation documentation() throws ParseException {/*@bgen(jjtree) Documentation */
     ASTDocumentation jjtn000 = new ASTDocumentation(this, JJTDOCUMENTATION);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);ASTDocumentation doc;
     String text;
    try {
      jj_consume_token(LP);
      jj_consume_token(DOCUMENTATION);
      version(jjtn000);
      slogan(jjtn000);
      description(jjtn000);
      changeItems(jjtn000);
      jj_consume_token(RP);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
    throw new Error("Missing return statement in function");
  }

/* (VERSION "12" "24")  */
  final public   void version(ASTDocumentation doc) throws ParseException {int major, minor;
    jj_consume_token(LP);
    jj_consume_token(VERSION);
    major = integer();
    minor = integer();
    jj_consume_token(RP);
doc.setVersion(major, minor);
  }

/* (SLOGAN "bla bla bla") */
  final public   void slogan(ASTDocumentation doc) throws ParseException {String text;
    jj_consume_token(LP);
    jj_consume_token(SLOGAN);
    text = string();
    jj_consume_token(RP);
doc.setSlogan(text);
  }

/* (DESCRIPTION "bla bla bla") */
  final public   void description(ASTDocumentation doc) throws ParseException {String text;
    jj_consume_token(LP);
    jj_consume_token(DESCRIPTION);
    text = string();
    jj_consume_token(RP);
doc.setDescription(text);
  }

/* (CHANGEITEM (((AUTHOR "Per Leander")(WHEN "20170102 18:18"))))) */
  final public   void changeItems(ASTDocumentation doc) throws ParseException {ASTChangeItem item;
    jj_consume_token(LP);
    jj_consume_token(CHANGEITEMS);
    jj_consume_token(LP);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LP:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      changeItem();
doc.addChangeItem((ASTChangeItem)jjtree.popNode());
    }
    jj_consume_token(RP);
    jj_consume_token(RP);

  }
